added background image

--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
 
 <body>
 
+<div class="wrapper">
 	<header>
-		<h1>Crystals Collector!</h1>
+		<h1>Crystal Collector!</h1>
+		<br>
 	</header>
 
 	<div>
-		<h2>Rules</h2>
+		<h2 style="font-size: 35px;">Rules</h2>
+			<ul>
+				<li>You will be given a random number at the start of the game.</li>
+				<br>
+				<li>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</li>
+				<br>
+				<li>You win the game by matching your total score to the random number. You will lose the game if your total score goes above the random number.</li>
+				<br>
+				<li>The value of each crystal is hidden from you until you click on it.</li>
+				<br>
+				<li>Each time when the game starts, the game will change the values of each crystal.</li>
+				<br>
+			</ul>
 	</div>
 
 	<div>
-		<h2 id="match-this"></h2>
+		<h2>Random Number</h2>
+		<p id="match-this"></p>
 	</div>
 
 	<div>
@@ -42,7 +57,7 @@
 			<p id="player-value"></p>	
 	</div>
 	
-
+</div>
 
 
 
